dnl Process this file with autoconf to produce a configure script.
AC_INIT(ea.c)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AC_CHECK_LIB(fuse, fuse_main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h strings.h sys/time.h unistd.h attr/xattr.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_UTIME_NULL
AC_CHECK_FUNCS(mkdir strdup lsetxattr lgetxattr llistxattr)

AC_OUTPUT(Makefile)
